fixing colour of button on mobile

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ fieldset {
 }
 
 button {
-  color: black;
+  color: white;
   padding-top: 0.7rem;
   padding-bottom: 0.7rem;
   padding-left: 1.5rem;
